--- a/ASCoDTKernel/src/de/tum/ascodt/resources/cxx-port-native2socket-plain-implementation.template
+++ b/ASCoDTKernel/src/de/tum/ascodt/resources/cxx-port-native2socket-plain-implementation.template
@@ -1,17 +1,26 @@
+#include "__PATH_FULL_QUALIFIED_NAME__Cxx2SocketPlainPort.h"
+#ifdef _WIN32
+#include <winsock2.h>
+#include <ws2tcpip.h>
+#define bzero(b,len) (memset((b), '\0', (len)), (void) 0)  
+#define bcopy(b1,b2,len) (memmove((b2), (b1), (len)), (void) 0)
+#else
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <netinet/in.h>
 #include <netdb.h>
-#include <stdlib.h>
 #include <unistd.h>
+#include <arpa/inet.h>
+#include <fcntl.h>
+#endif
+
 #include <stdio.h>
+#include <stdlib.h>
 #include <assert.h>
 #include <algorithm>
 #include <iostream>
 #include <string.h>
-#include <arpa/inet.h>
-#include "__PATH_FULL_QUALIFIED_NAME__Cxx2SocketPlainPort.h"
-#include <fcntl.h>
+#include <sstream>
 
 __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::__PORT_NAME__Cxx2SocketPlainPort(char* host,int port,int buffer_size):
      _buffer_size(buffer_size){
@@ -26,7 +35,7 @@ __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::__PORT_NAME__Cxx2SocketPlainPort(int
     _buffer_size(buffer_size){
     _rcvBuffer=new char[_buffer_size];
     _sendBuffer=new char[_buffer_size];
-    __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::open_server(port,_sockfd,_newsockfd);
+    //__FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::open_server(port,_sockfd,_newsockfd);
 }
 
 __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::~__PORT_NAME__Cxx2SocketPlainPort(){
@@ -41,38 +50,55 @@ __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::~__PORT_NAME__Cxx2SocketPlainPort(){
 }
 
 
-int __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::getSockfd(){
-     return _sockfd;
-}
-int __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::getNewsockfd(){
-     return _newsockfd;
-}
+//int __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::getSockfd(){
+//     return _sockfd;
+//}
+//int __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::getNewsockfd(){
+//     return _newsockfd;
+//}
 
-void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::open_client(char* hostname,int port,int &sockfd,int &newsockfd){
-          struct sockaddr_in serv_addr;
-          struct hostent *server;
-
-          sockfd = socket(AF_INET, SOCK_STREAM, 0);
+void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::open_client(char* hostname,int port,
+#ifdef _WIN32
+SOCKET
+#else
+int
+#endif  
+&sockfd,
+#ifdef _WIN32
+SOCKET
+#else
+int
+#endif  
+&newsockfd){
+		  std::stringstream port_str;
+		  port_str<<port;
+          struct addrinfo *result = NULL,
+     	                   hints;
+          bzero( &hints, sizeof(hints) );
+          hints.ai_family = AF_UNSPEC;
+          hints.ai_socktype = SOCK_STREAM;
+          hints.ai_protocol = IPPROTO_TCP;
+          getaddrinfo(hostname, port_str.str().c_str(), &hints, &result);
+          sockfd = socket(result->ai_family, result->ai_socktype, 
+            result->ai_protocol);
           assert(sockfd >= 0);
-          server = gethostbyname(hostname);
-          assert(server>=0);
-          bzero((char *) &serv_addr, sizeof(serv_addr));
-          serv_addr.sin_family = AF_INET;
-          bcopy((char *)server->h_addr,
-                    (char *)&serv_addr.sin_addr.s_addr,
-                    server->h_length);
-          serv_addr.sin_port = htons(port);
+          
           int tries=60;
                 while(tries>0){
-               if (connect(sockfd,(struct sockaddr *) &serv_addr,sizeof(serv_addr)) >= 0)
+                 if (::connect(sockfd, result->ai_addr, (int)result->ai_addrlen)==0)
                     break;
                          tries--;
-               sleep(1);
+#ifdef _WIN32
+						 Sleep(1000);
+#else
+						 sleep(1);
+#endif	
                 }   
          newsockfd=sockfd;
         
 }
 
+/*
 void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::open_server(int port,int &sockfd,int &newsockfd){
           socklen_t clilen;
 
@@ -94,8 +120,15 @@ void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::open_server(int port,int &sockf
                     &clilen);
           assert (newsockfd >= 0);
 }
+*/
 
-void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::sendData(char* data, size_t numberOfBytes, char* sendBuffer, int newsockfd,int bufferSize){
+void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::sendData(char* data, size_t numberOfBytes, char* sendBuffer,
+#ifdef _WIN32
+SOCKET
+#else
+int
+#endif 
+newsockfd,int bufferSize){
      char* data_ptr=(char*)data;
      int remaining_bytes_to_send=0,total_send_bytes=0,send_bytes=0,n=0;
 
@@ -107,7 +140,20 @@ void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::sendData(char* data, size_t num
           send_bytes=0;
           char* send_buffer_ptr=sendBuffer;
           while(send_bytes<bufferSize){
-               n = write(newsockfd,send_buffer_ptr,bufferSize-send_bytes);
+               n = 
+#ifdef _WIN32
+				   send(
+#else
+
+				   write(
+#endif
+				   newsockfd,send_buffer_ptr,bufferSize-send_bytes
+#ifdef _WIN32
+				   ,0
+#else
+
+#endif
+				   );
                if(n>0){
                     send_bytes+=n;
                     send_buffer_ptr+=n;
@@ -120,7 +166,13 @@ void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::sendData(char* data, size_t num
 }
 
 
-void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::readData(char* data,size_t size_of_data,char* readBuffer,int newsockfd, int bufferSize){
+void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::readData(char* data,size_t size_of_data,char* readBuffer,
+#ifdef _WIN32
+SOCKET
+#else
+int
+#endif 
+newsockfd, int bufferSize){
           bzero(readBuffer,bufferSize);
           int bytes_received=0;
           int total_bytes_received=0;
@@ -133,7 +185,18 @@ void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::readData(char* data,size_t size
                bytes_received=0;
                buffer_ptr=readBuffer;
                while(bytes_received<bufferSize){
-                    local_bytes_received = read(newsockfd,buffer_ptr,bufferSize-bytes_received);
+                    local_bytes_received = 
+#ifdef _WIN32
+						recv(
+#else
+						read(
+#endif
+							newsockfd,buffer_ptr,bufferSize-bytes_received
+#ifdef _WIN32
+							,0
+#else
+#endif
+							);
                     if(local_bytes_received>0){
                          bytes_received+=local_bytes_received;
                          buffer_ptr+=local_bytes_received;
@@ -148,11 +211,31 @@ void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::readData(char* data,size_t size
 }
 
 
-void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::close(int &sockfd,int &newsockfd){
+void __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort::close(
+#ifdef _WIN32
+SOCKET
+#else
+int
+#endif 
+&sockfd,
+#ifdef _WIN32
+SOCKET
+#else
+int
+#endif 
+&newsockfd){
+#ifdef _WIN32
+	 if(newsockfd>=0)
+         closesocket(newsockfd);
+     if(sockfd>=0)
+         closesocket(sockfd);
+#else
+
      if(newsockfd>=0)
          ::close(newsockfd);
      if(sockfd>=0)
          ::close(sockfd);
+#endif
 }
 
 -- INSERT HERE --
