--- a/ASCoDTKernel/src/de/tum/ascodt/resources/cxx-port-socket-dispatcher-implementation.template
+++ b/ASCoDTKernel/src/de/tum/ascodt/resources/cxx-port-socket-dispatcher-implementation.template
@@ -1,36 +1,65 @@
 #include "__PATH_FULL_QUALIFIED_NAME__NativeSocketDispatcher.h"
-#include <algorithm>
+#ifdef _WIN32
+#include <winsock2.h>
+#include <ws2tcpip.h>
+#define bzero(b,len) (memset((b), '\0', (len)), (void) 0)  
+#define bcopy(b1,b2,len) (memmove((b2), (b1), (len)), (void) 0)
+#else
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <netinet/in.h>
 #include <netdb.h>
-#include <stdlib.h>
 #include <unistd.h>
+#include <arpa/inet.h>
+#include <fcntl.h>
+#endif
+
 #include <stdio.h>
+#include <stdlib.h>
 #include <assert.h>
 #include <algorithm>
 #include <iostream>
 #include <string.h>
-#include <arpa/inet.h>
-#include <fcntl.h>
+#include <sstream>
 
+#ifdef _WIN32
+#include <windows.h>
+DWORD WINAPI __PORT_NAME___dispatch_loop(void *arg){
+     ((__FULL_QUALIFIED_NAME__NativeSocketDispatcher*) arg)->dispatch();
+}
+#else
+
+#include <pthread.h>
 void* __PORT_NAME___dispatch_loop(void *arg){
      ((__FULL_QUALIFIED_NAME__NativeSocketDispatcher*) arg)->dispatch();
 }
+#endif
+
 __FULL_QUALIFIED_NAME__NativeSocketDispatcher::__PORT_NAME__NativeSocketDispatcher(char* host,int port,int bufferSize):
      _buffer_size(bufferSize){
      _rcvBuffer=new char[_buffer_size];
      _sendBuffer=new char[_buffer_size];
      
      __FULL_QUALIFIED_NAME__NativeSocketDispatcher::open(host,port,_sockfd,_newsockfd);
-     pthread_create(&_task, NULL,__PORT_NAME___dispatch_loop, this);
+     #ifdef _WIN32
+     CreateThread(NULL, 0, __PORT_NAME___dispatch_loop, this, 0, NULL);
+     #else
+     pthread_t task;
+     pthread_create(&task, NULL,__PORT_NAME___dispatch_loop, this);
+	 #endif
 }
 
 __FULL_QUALIFIED_NAME__NativeSocketDispatcher::__PORT_NAME__NativeSocketDispatcher(int port,int bufferSize):
       _buffer_size(bufferSize){
      _rcvBuffer=new char[_buffer_size];
      _sendBuffer=new char[_buffer_size];
-     __FULL_QUALIFIED_NAME__NativeSocketDispatcher::open(port,_sockfd,_newsockfd);
+     //__FULL_QUALIFIED_NAME__NativeSocketDispatcher::open(port,_sockfd,_newsockfd);
+      #ifdef _WIN32
+     CreateThread(NULL, 0, __PORT_NAME___dispatch_loop, this, 0, NULL);
+     #else
+     pthread_t task;
+     pthread_create(&task, NULL,__PORT_NAME___dispatch_loop, this);
+	 #endif
 }
 __FULL_QUALIFIED_NAME__NativeSocketDispatcher::~__PORT_NAME__NativeSocketDispatcher(){
      delete [] _rcvBuffer;
@@ -40,31 +69,48 @@ __FULL_QUALIFIED_NAME__NativeSocketDispatcher::~__PORT_NAME__NativeSocketDispatc
 }
 
 
-void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::open(char* hostname,int port,int &sockfd,int &newsockfd){
-          struct sockaddr_in serv_addr;
-          struct hostent *server;
-
-          sockfd = socket(AF_INET, SOCK_STREAM, 0);
+void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::open(char* hostname,int port,
+#ifdef _WIN32
+    SOCKET
+#else
+    int
+#endif
+&sockfd,
+#ifdef _WIN32
+    SOCKET
+#else
+    int
+#endif
+&newsockfd){
+          std::stringstream port_str;
+		  port_str<<port;
+          struct addrinfo *result = NULL,
+     	                   hints;
+          bzero( &hints, sizeof(hints) );
+          hints.ai_family = AF_UNSPEC;
+          hints.ai_socktype = SOCK_STREAM;
+          hints.ai_protocol = IPPROTO_TCP;
+          getaddrinfo(hostname, port_str.str().c_str(), &hints, &result);
+          sockfd = socket(result->ai_family, result->ai_socktype, 
+            result->ai_protocol);
           assert(sockfd >= 0);
-          server = gethostbyname(hostname);
-          assert(server>=0);
-          bzero((char *) &serv_addr, sizeof(serv_addr));
-          serv_addr.sin_family = AF_INET;
-          bcopy((char *)server->h_addr,
-                    (char *)&serv_addr.sin_addr.s_addr,
-                    server->h_length);
-          serv_addr.sin_port = htons(port);
+          
           int tries=60;
                 while(tries>0){
-               if (::connect(sockfd,(struct sockaddr *) &serv_addr,sizeof(serv_addr)) >= 0)
+                 if (::connect(sockfd, result->ai_addr, (int)result->ai_addrlen)==0)
                     break;
                          tries--;
-               sleep(1);
+#ifdef _WIN32
+						 Sleep(1000);
+#else
+						 sleep(1);
+#endif	
                 }   
          newsockfd=sockfd;
         
 }
 
+/*
 void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::open(int port,int &sockfd,int &newsockfd){
           socklen_t clilen;
 
@@ -86,9 +132,15 @@ void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::open(int port,int &sockfd,in
                     &clilen);
           assert (newsockfd >= 0);
 }
+*/
 
-
-void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::sendData(char* data, size_t numberOfBytes, char* sendBuffer, int newsockfd,int bufferSize){
+void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::sendData(char* data, size_t numberOfBytes, char* sendBuffer,
+#ifdef _WIN32
+    SOCKET
+#else
+    int
+#endif
+newsockfd,int bufferSize){
      char* data_ptr=(char*)data;
      int remaining_bytes_to_send=0,total_send_bytes=0,send_bytes=0,n=0;
 
@@ -100,7 +152,20 @@ void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::sendData(char* data, size_t 
           send_bytes=0;
           char* send_buffer_ptr=sendBuffer;
           while(send_bytes<bufferSize){
-               n = write(newsockfd,send_buffer_ptr,bufferSize-send_bytes);
+               n = 
+#ifdef _WIN32
+				   send(
+#else
+
+				   write(
+#endif
+				   newsockfd,send_buffer_ptr,bufferSize-send_bytes
+#ifdef _WIN32
+				   ,0
+#else
+
+#endif
+				   );
                if(n>0){
                     send_bytes+=n;
                     send_buffer_ptr+=n;
@@ -113,8 +178,14 @@ void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::sendData(char* data, size_t 
 }
 
 
-void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::readData(char* data,size_t size_of_data,char* readBuffer,int newsockfd, int bufferSize){
-          bzero(readBuffer,bufferSize);
+void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::readData(char* data,size_t size_of_data,char* readBuffer,
+#ifdef _WIN32
+    SOCKET
+#else
+    int
+#endif
+newsockfd, int bufferSize){
+ 		  bzero(readBuffer,bufferSize);
           int bytes_received=0;
           int total_bytes_received=0;
           int local_bytes_received=0;
@@ -126,7 +197,18 @@ void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::readData(char* data,size_t s
                bytes_received=0;
                buffer_ptr=readBuffer;
                while(bytes_received<bufferSize){
-                    local_bytes_received = read(newsockfd,buffer_ptr,bufferSize-bytes_received);
+                    local_bytes_received = 
+#ifdef _WIN32
+						recv(
+#else
+						read(
+#endif
+							newsockfd,buffer_ptr,bufferSize-bytes_received
+#ifdef _WIN32
+							,0
+#else
+#endif
+							);
                     if(local_bytes_received>0){
                          bytes_received+=local_bytes_received;
                          buffer_ptr+=local_bytes_received;
@@ -138,14 +220,35 @@ void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::readData(char* data,size_t s
                total_bytes_received+=bytes_to_copy;
           }
 
+
 }
 
 
-void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::close(int &sockfd,int &newsockfd){
+void __FULL_QUALIFIED_NAME__NativeSocketDispatcher::close(
+#ifdef _WIN32
+    SOCKET
+#else
+    int
+#endif
+&sockfd,
+#ifdef _WIN32
+    SOCKET
+#else
+    int
+#endif
+&newsockfd){
+#ifdef _WIN32
+	 if(newsockfd>=0)
+         closesocket(newsockfd);
+     if(sockfd>=0)
+         closesocket(sockfd);
+#else
+
      if(newsockfd>=0)
          ::close(newsockfd);
      if(sockfd>=0)
          ::close(sockfd);
+#endif
 }
 
 void connect___PORT_NAME__(void* ref,__FULL_QUALIFIED_NAME__* port){
