--- a/ASCoDTKernel/src/de/tum/ascodt/resources/c-port-native2socket-plain-header.template
+++ b/ASCoDTKernel/src/de/tum/ascodt/resources/c-port-native2socket-plain-header.template
@@ -5,9 +5,15 @@
 #include <string>
 
 extern "C" {
+#ifdef _WIN32
+void __C_FULL_QUALIFIED_NAME_4WIN__C2SOCKET_PLAIN_PORT_CREATE_CLIENT_INSTANCE(long long* ptr,char* host,int& port,int& buffer_size);
+void __C_FULL_QUALIFIED_NAME_4WIN__C2SOCKET_PLAIN_PORT_CREATE_SERVER_INSTANCE(long long* ptr,int& port,int& buffer_size);
+void __C_FULL_QUALIFIED_NAME_4WIN__C2SOCKET_PLAIN_PORT_DESTROY_INSTANCE(long long* ptr);
+#else
 void __C_FULL_QUALIFIED_NAME__c2socket_plain_port_create_client_instance_(long long* ptr,char* host,int& port,int& buffer_size);
 void __C_FULL_QUALIFIED_NAME__c2socket_plain_port_create_server_instance_(long long* ptr,int& port,int& buffer_size);
 void __C_FULL_QUALIFIED_NAME__c2socket_plain_port_destroy_instance_(long long* ptr);
+#endif
 -- INSERT HERE --
 }
 #endif
