--- a/ASCoDTKernel/src/de/tum/ascodt/resources/c-port-native2socket-plain-implementation.template
+++ b/ASCoDTKernel/src/de/tum/ascodt/resources/c-port-native2socket-plain-implementation.template
@@ -1,21 +1,16 @@
-#include <sys/types.h>
-#include <sys/socket.h>
-#include <netinet/in.h>
-#include <netdb.h>
-#include <stdlib.h>
-#include <unistd.h>
-#include <stdio.h>
-#include <assert.h>
-#include <algorithm>
+
 #include <iostream>
 #include <string.h>
-#include <arpa/inet.h>
 #include "__PATH_FULL_QUALIFIED_NAME__C2CxxSocketPlainPort.h"
 #include "__PATH_FULL_QUALIFIED_NAME__Cxx2SocketPlainPort.h"
 #include "__PATH_FULL_QUALIFIED_NAME__.h"
 extern "C" {
 
+#ifdef _WIN32
+void __C_FULL_QUALIFIED_NAME_4WIN__C2SOCKET_PLAIN_PORT_CREATE_CLIENT_INSTANCE(long long* ptr,char* host,int& port,int& buffer_size){
+#else
 void __C_FULL_QUALIFIED_NAME__c2socket_plain_port_create_client_instance_(long long* ptr,char* host,int& port,int& buffer_size){
+#endif
    *ptr=(long long)new __CXX_FULL_QUALIFIED_NAME__Cxx2SocketPlainPort(
         host,
         port,
@@ -25,7 +20,11 @@ void __C_FULL_QUALIFIED_NAME__c2socket_plain_port_create_client_instance_(long l
 
 }
 
+#ifdef _WIN32
+void __C_FULL_QUALIFIED_NAME_4WIN__C2SOCKET_PLAIN_PORT_CREATE_SERVER_INSTANCE(long long* ptr,int& port,int& buffer_size){
+#else
 void __C_FULL_QUALIFIED_NAME__c2socket_plain_port_create_server_instance_(long long* ptr,int& port,int& buffer_size){
+#endif
    *ptr=(long long)new __CXX_FULL_QUALIFIED_NAME__Cxx2SocketPlainPort(
         port,
         buffer_size
@@ -34,8 +33,11 @@ void __C_FULL_QUALIFIED_NAME__c2socket_plain_port_create_server_instance_(long l
 
 }
 
-
+#ifdef _WIN32
+void __C_FULL_QUALIFIED_NAME_4WIN__C2SOCKET_PLAIN_PORT_DESTROY_INSTANCE(long long *ptr){
+#else
 void __C_FULL_QUALIFIED_NAME__c2socket_plain_port_destroy_instance_(long long *ptr){
+#endif
      __CXX_FULL_QUALIFIED_NAME__Cxx2SocketPlainPort* c_ptr = (__CXX_FULL_QUALIFIED_NAME__Cxx2SocketPlainPort*)*ptr;
      if(c_ptr!=NULL){
          delete c_ptr;
