--- a/ASCoDTKernel/src/de/tum/ascodt/resources/c-port-socket-dispatcher-proxy-implementation.template
+++ b/ASCoDTKernel/src/de/tum/ascodt/resources/c-port-socket-dispatcher-proxy-implementation.template
@@ -5,7 +5,11 @@
 #include <string.h>
 extern "C" {
 
+#ifdef _WIN32
+void __C_FULL_QUALIFIED_NAME_4WIN___F2C_NSD_CREATE_CLIENT_INSTANCE(long long* ptr,char* host,int& port,int& buffer_size){
+#else
 void __C_FULL_QUALIFIED_NAME___f2c_nsd_create_client_instance_(long long* ptr,char* host,int& port,int& buffer_size){
+#endif     
      *ptr=(long long)new __CXX_FULL_QUALIFIED_NAME__NativeSocketDispatcher(
            host,
            port,
@@ -18,8 +22,12 @@ void __C_FULL_QUALIFIED_NAME___f2c_nsd_create_client_instance_(long long* ptr,ch
 
 
 
+#ifdef _WIN32
+void __C_FULL_QUALIFIED_NAME_4WIN___F2C_NSD_DESTROY_INSTANCE(long long* ptr){
 
+#else
 void __C_FULL_QUALIFIED_NAME___f2c_nsd_destroy_instance_(long long* ptr){
+#endif
      __CXX_FULL_QUALIFIED_NAME__NativeSocketDispatcher* dispatcher =
                ((__CXX_FULL_QUALIFIED_NAME__NativeSocketDispatcher*)*ptr);
      if(dispatcher!=NULL){
