--- a/ASCoDTKernel/src/de/tum/ascodt/resources/cxx-port-native2socket-plain-header.template
+++ b/ASCoDTKernel/src/de/tum/ascodt/resources/cxx-port-native2socket-plain-header.template
@@ -4,29 +4,77 @@
 #include "__PATH_FULL_QUALIFIED_NAME__.h"
 #include <iostream>
 #include <string>
-
+#ifdef _WIN32
+#include <winsock2.h>
+#endif
 __OPEN_PACKAGE__
      class __PORT_NAME__Cxx2SocketPlainPort;
 __CLOSE_PACKAGE__
 
 class __FULL_QUALIFIED_NAME__Cxx2SocketPlainPort: public __FULL_QUALIFIED_NAME__{
   private:
-    int _sockfd;
-    int _newsockfd;
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif 
+    _sockfd;
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif
+    _newsockfd;
     int _buffer_size;
     char *_rcvBuffer;
     char *_sendBuffer;
-    void open_client(char* hostname,int port,int &sockfd,int &newsockfd);
-    void open_server(int port,int &sockfd,int &newsockfd);
-    void sendData(char* data, size_t numberOfBytes, char* sendBuffer, int newsockfd,int bufferSize);
-    void readData(char* data,size_t size_of_data,char* readBuffer,int newsockfd, int bufferSize);
-    void close(int &sockfd,int &newsockfd);
+    void open_client(char* hostname,int port,
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif 
+    &sockfd,
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif 
+    &newsockfd);
+    //void open_server(int port,int &sockfd,int &newsockfd);
+    void sendData(char* data, size_t numberOfBytes, char* sendBuffer,
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif 
+    newsockfd,int bufferSize);
+    void readData(char* data,size_t size_of_data,char* readBuffer,
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif 
+    newsockfd, int bufferSize);
+    void close(
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif 
+    &sockfd,
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif 
+    &newsockfd);
   public:
     __PORT_NAME__Cxx2SocketPlainPort(char* host,int port,int buffer_size);
      __PORT_NAME__Cxx2SocketPlainPort(int port,int buffer_size);
     ~__PORT_NAME__Cxx2SocketPlainPort();
-    int getSockfd();
-    int getNewsockfd();
+    //int getSockfd();
+    //int getNewsockfd();
     
     -- INSERT HERE --
 };
