--- a/ASCoDTKernel/src/de/tum/ascodt/resources/cxx-port-socket-dispatcher-header.template
+++ b/ASCoDTKernel/src/de/tum/ascodt/resources/cxx-port-socket-dispatcher-header.template
@@ -4,7 +4,9 @@
 #include "__PATH_FULL_QUALIFIED_NAME__NativeDispatcher.h"
 #include <iostream>
 #include <vector>
-#include <pthread.h>
+#ifdef _WIN32
+#include <winsock2.h>
+#endif
 __OPEN_PACKAGE__
      class __PORT_NAME__NativeSocketDispatcher;
 __CLOSE_PACKAGE__
@@ -26,18 +28,66 @@ __CLOSE_PACKAGE__
 
 class __FULL_QUALIFIED_NAME__NativeSocketDispatcher: public __FULL_QUALIFIED_NAME__NativeDispatcher{
   private:
-    pthread_t _task;
-    int _sockfd;
-    int _newsockfd;
+   
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif 
+    _sockfd;
+    #ifdef _WIN32
+    SOCKET
+    #else
+    int
+    #endif
+    _newsockfd;
     int _buffer_size;
     char *_rcvBuffer;
     char *_sendBuffer;
     
-    void open(char* hostname,int port,int &sockfd,int &newsockfd);
-    void open(int port,int &sockfd,int &newsockfd);
-    void sendData(char* data, size_t numberOfBytes, char* sendBuffer, int newsockfd,int bufferSize);
-    void readData(char* data,size_t size_of_data,char* readBuffer,int newsockfd, int bufferSize);
-    void close(int &sockfd,int &newsockfd);
+    void open(char* hostname,int port,
+    #ifdef _WIN32
+    SOCKET
+	#else
+    int
+	#endif 
+    &sockfd,
+     #ifdef _WIN32
+    SOCKET
+	#else
+    int
+	#endif 
+    &newsockfd);
+    //void open(int port,int &sockfd,int &newsockfd);
+    void sendData(char* data, size_t numberOfBytes, char* sendBuffer,
+    #ifdef _WIN32
+    SOCKET
+	#else
+    int
+	#endif 
+    newsockfd,
+    int bufferSize);
+    void readData(char* data,size_t size_of_data,char* readBuffer,
+    #ifdef _WIN32
+    SOCKET
+	#else
+    int
+	#endif 
+    newsockfd,
+    int bufferSize);
+    void close(
+    #ifdef _WIN32
+    SOCKET
+	#else
+    int
+	#endif
+ 	&sockfd,
+ 	#ifdef _WIN32
+    SOCKET
+	#else
+    int
+	#endif
+	&newsockfd);
     
   public:
     __PORT_NAME__NativeSocketDispatcher(char* host,int port,int bufferSize);
