--- a/ASCoDTKernel/src/de/tum/ascodt/resources/native-component-fproxy-implementation-provides-port.template
+++ b/ASCoDTKernel/src/de/tum/ascodt/resources/native-component-fproxy-implementation-provides-port.template
@@ -1,5 +1,5 @@
 
-subroutine __COMPONENT_NAME___fproxy___OPERATION_NAME__(this__OPERATION_PARAMETERS_LIST__)
+subroutine __COMPONENT_NAME___fproxy___OPERATION_NAME__(this__OPERATION_PARAMETERS_LIST__) bind(C)
     Use __FULL_QUALIFIED_NAME__Implementation
     Use, intrinsic :: iso_c_binding
     Type( c_ptr ),intent(in) :: this
