cmakes for components

--- a/components/athlet-components/src/cmake-grs.Athlet/CMakeLists.txt
+++ b/components/athlet-components/src/cmake-grs.Athlet/CMakeLists.txt
@@ -10,9 +10,15 @@ if (JNI_FOUND)
 endif()
 
 include(CMakeForceCompiler)	   
-CMAKE_FORCE_CXX_COMPILER(/home/software/intel/bin/icpc "Intel Cxx Compiler") 
-CMAKE_FORCE_C_COMPILER(/home/software/intel/bin/icc "Intel C Compiler")     
-CMAKE_FORCE_Fortran_COMPILER(/home/software/intel/bin/ifort "Intel Fortran Compiler")
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+CMAKE_FORCE_CXX_COMPILER(icpc "Intel Cxx Compiler") 
+CMAKE_FORCE_C_COMPILER(icc "Intel C Compiler")     
+CMAKE_FORCE_Fortran_COMPILER(ifort "Intel Fortran Compiler")
+ELSE()
+CMAKE_FORCE_CXX_COMPILER(icl.exe "Intel Cxx Compiler") 
+CMAKE_FORCE_C_COMPILER(icl.exe "Intel C Compiler")     
+CMAKE_FORCE_Fortran_COMPILER(ifort.exe "Intel Fortran Compiler")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 message(STATUS ${CMAKE_Fortran_COMPILER})
 message(STATUS ${CMAKE_CXX_COMPILER})
 message(STATUS ${CMAKE_C_COMPILER})
@@ -21,8 +27,8 @@ enable_language( Fortran )
 option(EXTERNAL_ATHLET "Use external ATHLET" ON)
 if(EXTERNAL_ATHLET)
 #	include athlet header files *.mod
-	set(ATHLET_PATH "")
-	INCLUDE_DIRECTORIES(/work_fast/atanasoa/Programme/workspace_new/Athlet/LINUX/lin64/modlib64)
+	find_path(ATHLET_PATH "modlib")
+	INCLUDE_DIRECTORIES(${ATHLET_PATH})
 	set(ATHLET_LIBDIR "/work_fast/atanasoa/Programme/workspace_new/Athlet/LINUX/LIBRARIES")
 	find_library(ATHLET_LIB NAMES athlet PATHS ${ATHLET_LIBDIR})
 
